fix: window layout & open window focus issue
window layout issue due to top addr bar & keyboard in mobile (#105) (firefox still not fully ok)
separate useWindowResize
shrink cancel button

--- a/src/general.scss
+++ b/src/general.scss
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100dvh;
+}
+
 body {
   overflow: hidden;
   perspective: 120vh;
