--- a/src/window.scss
+++ b/src/window.scss
@@ -23,14 +23,14 @@
       &.screen-volume-pref .window-innerwrapper,
       &.screen-help .window-innerwrapper {
         @apply overflow-y-auto px-4;
-        max-height: calc(100vh - 2em);
+        max-height: calc(100dvh - 2em);
 
         @supports selector(::-webkit-scrollbar) {
           &::-webkit-scrollbar {
             width: 10px;
           }
           &::-webkit-scrollbar-track {
-            margin-top: 1.5rem;
+            margin-top: 1.2rem;
             border-radius: 8px;
             background: #964e4e;
             box-shadow: 0px 0px 6px 2px rgba(255, 255, 255, 0.5) inset;
@@ -129,7 +129,7 @@
         @apply bg-green-500 hover:bg-green-400 border-green-700 hover:border-green-500 border-b-0;
       }
       &.cancel:enabled {
-        @apply bg-red-500 hover:bg-red-400 border-red-700 hover:border-red-500 absolute w-12 h-12 -top-4 ltr:-right-4 rtl:-left-4 bg-no-repeat bg-contain bg-center;
+        @apply bg-red-500 hover:bg-red-400 border-red-700 hover:border-red-500 absolute w-9 h-9 -top-1 ltr:-right-1 rtl:-left-1 bg-no-repeat bg-contain bg-center;
         background-image: url('../assets/img/x.svg');
       }
       &:active {
@@ -281,7 +281,7 @@
       }
 
       #against-human-or-ai {
-        @apply font-normal text-gray-400 ltr:pl-1 rtl:pl-5 ltr:pr-5 rtl:pr-1 text-sm;
+        @apply font-normal text-gray-400 ltr:pl-1 rtl:pl-4 ltr:pr-4 rtl:pr-1 text-sm;
       }
 
       .multiplayer {
